<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AboutMeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="75dp"
        android:padding="20dp"
        android:orientation="vertical">
        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:strokeColor="@android:color/holo_green_light"
            app:strokeWidth="4dp"
            app:cardCornerRadius="85dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:src="@drawable/dev_pic"
                android:contentDescription="@string/profile_picture" />

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_me_name"
            style="@style/TitleTextStyle"
            android:layout_marginBottom="7dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_me_details" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>