<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="14dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editImageUrl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:hint="@string/news_image_url">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editNewsTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/news_title"
        android:layout_marginBottom="7dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="3"
            android:minLines="3"
            android:gravity="start|top"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/editNewsDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/news_description">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="5"
            android:minLines="5"
            android:gravity="start|top"/>
    </com.google.android.material.textfield.TextInputLayout>
</LinearLayout>